<resources>
    <string name="app_name">Bop It</string>
    <string name="loading">LOADING</string>
    <string name="logo">Logo Bop It</string>
    <string name="wave_bg">Waves Image</string>

    <!-- Preference Titles -->
    <string name="title_activity_settings">Settings</string>
    <string name="settings_header_personal">Personal settings</string>
    <string name="settings_title_sound">Sound settings</string>
    <string name="settings_title_highscore">Your highscores</string>

    <!-- Customize Game Rules -->
    <string name="title_activity_customize_game_rules">Customize Game Rules</string>
    <string name="reset_game_rules">Reset to default</string>
    <string name="switch_avoid_repeating_same_game">Avoid repeating same game type</string>
    <string name="text_switch_game_types">Switch individual game types</string>

    <!-- Personal Preferences -->
    <string name="setting_player_name">Your player name</string>
    <string name="yourName">Put in your player name</string>

    <!-- Sound Preferences -->
    <string name="setting_title_sound">Sound</string>
    <string name="settings_title_effect">Effects</string>
    <string name="summary_on">on</string>
    <string name="summary_off">off</string>

    <!-- Button Preferences -->
    <string name="saveButton">Save</string>
    <string name="resetButton">Reset</string>
    <string name="rulesButton">Rules</string>

    <string name="up">UP</string>
    <string name="left">LEFT</string>
    <string name="right">RIGHT</string>
    <string name="down">DOWN</string>

    <string name="titleShake">Shake the cocktail shaker</string>

    <!-- Button Preferences -->
    <string name="persHighscore">0</string>

    <string name="challenge_cover_light_sensor">Cover light sensor!</string>



    <!-- Button Cheating -->
    <string name="cheatButton">Cheat</string>
    <string name="reportButton">Report</string>

    <!-- Achievement -->
    <string name="easy100">CgkI1P7L9bkJEAIQCA</string>
    <string name="medium100">CgkI1P7L9bkJEAIQCw</string>
    <string name="hard100">CgkI1P7L9bkJEAIQDg</string>
    <string name="easy1000">CgkI1P7L9bkJEAIQCQ</string>
    <string name="medium1000">CgkI1P7L9bkJEAIQDA</string>
    <string name="hard1000">CgkI1P7L9bkJEAIQDw</string>
    <string name="easy10000">CgkI1P7L9bkJEAIQCg</string>
    <string name="medium10000">CgkI1P7L9bkJEAIQDQ</string>
    <string name="hard10000">CgkI1P7L9bkJEAIQEA</string>
    <string name="gamesInRow10">CgkI1P7L9bkJEAIQBQ</string>
    <string name="gamesInRow25">CgkI1P7L9bkJEAIQBg</string>
    <string name="gamesInRow50">CgkI1P7L9bkJEAIQBw</string>
    <string name="KEY_SCORE_IMAGEBUTTONMINIGAME">minigameScore</string>
    <string name="KEY_SCORE_COLORBUTTONMINIGAME">minigameScore1</string>
    <string name="KEY_SCORE_PLACEPHONEMINIGAME">minigameScore2</string>
    <string name="KEY_SCORE_SHAKEPHONEMINIGAME">minigameScore3</string>
    <string name="KEY_SCORE_COVERLIGHTSENSORMINIGAME">minigameScore4</string>
    <string name="KEY_SCORE_RIGHTBUTTONCOMBINATION">minigameScore5</string>
    <string name="KEY_SCORE_SLIDERMINIGAME">minigameScore6</string>
    <string name="KEY_SCORE_DRAWINGMINIGAME">minigameScore7</string>
    <string name="KEY_SCORE_VOLUMEBUTTON">minigameScore8</string>
    <string name="KEY_SCORE_TEXTBASEDMINIGAME">minigameScore9</string>
    <string name="KEY_SCORE_SPECIALTEXTMINIGAME">minigameScore10</string>

    <!-- Rules -->
    <string name="rulesTitle">Rules and Imprint</string>
    <string name="rulesSubtitle">Rules</string>
    <string name="imprintSubtitle">Imprint</string>
    <string name="back">Back</string>
    <string name="rules4">Every player has 3 lives.</string>
    <string name="rules5">In multiplayer mode, the next player is selected at random.</string>
    <string name="rules6">When it is your turn, you have to complete the given task in the minigame in the given time.</string>
    <string name="rules7">Failure to do so causes the player to lose a life.</string>
    <string name="rules8">Holding down the cheat button will stop the time, releasing it will keep it running.</string>
    <string name="rules9">Cheating can be done an infinite number of times.</string>
    <string name="rules10">By pressing the report button, the current player can be reported as a cheater.
        If the player did not cheat, the person reporting the cheat loses a life. If the cheating was detected, the cheater loses the game.</string>
    <string name="rules1">Single player, multiplayer local and multiplayer online can be selected.</string>
    <string name="rules2">In single player you can choose the difficulties easy, medium and hard.</string>
    <string name="rules3">There are 12 minigames, that can be selected.</string>
    <string name="rules11">Google play achievements are available.</string>
    <string name="imprint1">Bop-It! is a student project in SE2 @ AAU. </string>
    <string name="imprint2">Developers: Burgstaller Raphael, Ismailov Ramiz,
    Knapp Markus, Polzer Michael, Volkmer Merlin, van der Rijst Claudia</string>
</resources>