<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/settings_header_personal">

        <EditTextPreference
            app:key="name"
            app:title="@string/setting_player_name"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/settings_title_sound">

        <SwitchPreferenceCompat
            app:key="sound"
            app:summaryOff="@string/summary_off"
            app:summaryOn="@string/summary_on"
            app:title="@string/setting_title_sound" />

        <SwitchPreferenceCompat
            app:key="effect"
            app:summaryOff="@string/summary_off"
            app:summaryOn="@string/summary_on"
            app:title="@string/settings_title_effect" />

    </PreferenceCategory>

</PreferenceScreen>