<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/pressUp"
        android:layout_width="200dp"
        android:layout_height="133dp"
        android:layout_marginBottom="1dp"
        android:gravity="center"
        android:text="@string/up"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/pressDown"
        android:layout_width="200dp"
        android:layout_height="133dp"
        android:layout_marginTop="1dp"
        android:text="@string/down"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="104dp"
        android:text="Select"
        android:textColor="@color/purple"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/pressUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="409dp"
        android:layout_height="133dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/pressDown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/pressLeft"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/left"
            android:textSize="40sp" />

        <Button
            android:id="@+id/pressRight"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/right"
            android:textSize="40sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>