<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_game_rules"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:menu="@menu/customize_game_rules_menu"
        app:navigationIcon="@android:drawable/ic_menu_close_clear_cancel"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/title_activity_customize_game_rules" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_avoid_repeating_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/switch_avoid_repeating_same_game"
        android:textSize="14sp"
        tools:checked="true" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textViewGameTypes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/text_switch_game_types" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:id="@+id/rules_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>


</LinearLayout>